--- a/RealMission8-group2-7/Views/Shared/_Layout.cshtml.css
+++ b/RealMission8-group2-7/Views/Shared/_Layout.cshtml.css
@@ -46,3 +46,8 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* Add other font styling properties as needed */
+}
