--- a/RealMission8-group2-7/Views/Shared/_Layout.cshtml
+++ b/RealMission8-group2-7/Views/Shared/_Layout.cshtml
@@ -3,16 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - RealMission8_group2_7</title>
+    <title>@ViewData["Title"] - TESTING</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/RealMission8_group2_7.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/TESTING.styles.css" asp-append-version="true" />
+    <link rel="icon" type="image/x-icon" href="~/img/goalLogo.png" />
 </head>
-<body>
+<body class="bg-chill">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-colorful border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RealMission8_group2_7</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/goallogo.png" width="50" />    Aim HIGH</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Form">Add A Task</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quadrant">Personal Matrix</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -36,9 +40,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted text-center">
         <div class="container">
-            &copy; 2024 - RealMission8_group2_7 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - Pobanz, Burrows, Villar Barrios, Hutchings
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
