--- a/RealMission8-group2-7/Views/Home/Index.cshtml
+++ b/RealMission8-group2-7/Views/Home/Index.cshtml
@@ -2,14 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container">
+<div>
     <div class="align-items-center text-center">
-        <h4>Welcome to</h4>
-        <h1>AIM HIGH</h1>
-        <h3 class="padding-below">Your Personal Time Management Organizer Matrix</h3>
-
+        <div class="coloredcol container-fluid">
+            <h4>Welcome to</h4>
+            <h1>AIM HIGH</h1>
+            <h3 class="padding-below">Your Personal Time Management Organizer Matrix</h3>
+        </div>
         <div class="row padding-below-sm">
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 coloredcol text-center">
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 coloredcol bg-gradient text-center">
                 <div class="d-flex flex-column h-100 justify-content-center align-items-center">
                     <img src="~/img/mantimemanagement.jpg" style="width: 100%;" alt="Time Management Image" />
 
@@ -29,12 +30,6 @@
                         The Stephen R. Covey Time Management Matrix is a tool introduced by Stephen Covey in his book "The 7 Habits of Highly Effective People." 
                         The matrix is a four-quadrant model that helps individuals categorize tasks based on their urgency and importance. It is designed to 
                         improve time management and productivity by guiding individuals to prioritize tasks effectively.
-                        <br /><br />
-                        The Time Management Matrix encourages individuals to spend more time where activities contribute to long-term goals and 
-                        personal growth. By consciously prioritizing and organizing tasks based on urgency and importance, individuals can enhance their productivity 
-                        and achieve a better work-life balance. 
-                        <br /><br />
-                        <b>Proactive planning and focusing are what truly matter to achieve long-term success!</b>
                     </p>
                 
                 </div>
@@ -42,12 +37,23 @@
         </div>
         <div class="row">
             <div class="col-7">
-                <p>Testing this idea out</p>
+                <p>
+                    The Time Management Matrix encourages individuals to spend more time where activities contribute to long-term goals and
+                    personal growth. By consciously prioritizing and organizing tasks based on urgency and importance, individuals can enhance their productivity
+                    and achieve a better work-life balance.
+                    <br /><br />
+                    <h4><b>Proactive planning and focusing are what truly matter to achieve long-term success!</b></h4>
+                </p>
             </div>
             <div class="col-5 coloredcol">
                 <img src="~/img/timemanagesketch.png" width="350" />
             </div>
         </div>
+        <div class="padding-below d-flex flex-column align-items-center">
+            <button class="mb-2"><a asp-controller="Home" asp-action="Quadrant">YOUR TIME MATRIX</a></button>
+            <button><a asp-controller="Home" asp-action="Form">ADD NEW TASK</a></button>
+        </div>
+
     </div>
 
 </div>
