added completed button

--- a/RealMission8-group2-7/Views/Home/Quadrant.cshtml
+++ b/RealMission8-group2-7/Views/Home/Quadrant.cshtml
@@ -69,6 +69,7 @@
                     <div>@task.task</div>
                     <a class="btn btn-info" asp-controller="home" asp-action="Edit" asp-route-id="@task.TaskId">Edit</a>
                     <a class="btn btn-danger" asp-controller="home" asp-action="Delete" asp-route-id="@task.TaskId">Delete</a>
+                    <a class="btn btn-dark" asp-controller="home" asp-action="Completed" asp-route-id="@task.TaskId">Complete</a>
                 }
             }
         </div>
@@ -81,6 +82,7 @@
                     <div>@task.task</div>
                     <a class="btn btn-info" asp-controller="home" asp-action="Edit" asp-route-id="@task.TaskId">Edit</a>
                     <a class="btn btn-danger" asp-controller="home" asp-action="Delete" asp-route-id="@task.TaskId">Delete</a>
+                    <a class="btn btn-dark" asp-controller="home" asp-action="Completed" asp-route-id="@task.TaskId">Complete</a>
                 }
             }
         </div>
@@ -99,6 +101,7 @@
                     <div>@task.task</div>
                     <a class="btn btn-info" asp-controller="home" asp-action="Edit" asp-route-id="@task.TaskId">Edit</a>
                     <a class="btn btn-danger" asp-controller="home" asp-action="Delete" asp-route-id="@task.TaskId">Delete</a>
+                    <a class="btn btn-dark" asp-controller="home" asp-action="Completed" asp-route-id="@task.TaskId">Complete</a>
                 }
             }
         </div>
@@ -111,6 +114,7 @@
                     <div>@task.task</div>
                     <a class="btn btn-info" asp-controller="home" asp-action="Edit" asp-route-id="@task.TaskId">Edit</a>
                     <a class="btn btn-danger" asp-controller="home" asp-action="Delete" asp-route-id="@task.TaskId">Delete</a>
+                    <a class="btn btn-dark" asp-controller="home" asp-action="Completed" asp-route-id="@task.TaskId">Complete</a>
                 }
             }
         </div>
