--- a/RealMission8-group2-7/Views/Home/Success.cshtml
+++ b/RealMission8-group2-7/Views/Home/Success.cshtml
@@ -2,11 +2,11 @@
     ViewData["Title"] = "Success";
 }
 <!-- success page that is returned if user is successful in submitting their form -->
-<div class="align-content-center">
+<div class="align-content-center text-center">
     <h1>Success! Your entry has been submitted!</h1>
 
     <p>Enter another one?</p>
 
     <!-- fancy button to help them return back to the form -->
-    <button><a href="Form">Return to Form</a></button>
+    <button><a asp-area ="" asp-controller="Home" asp-action="Form">Return to Form</a></button>
 </div>
