--- a/RealMission8-group2-7/wwwroot/css/site.css
+++ b/RealMission8-group2-7/wwwroot/css/site.css
@@ -1,7 +1,3 @@
-html {
-    font-size: 14px;
-}
-
 @media (min-width: 768px) {
     html {
         font-size: 16px;
@@ -13,20 +9,23 @@ html {
 }
 
 html {
+    font-size: 20px;
     position: relative;
     min-height: 100%;
 }
 
 body {
-    margin-bottom: 60px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 0px;
+    font-family: 'Montserrat', sans-serif;
     /* Add other font styling properties as needed */
 }
 
-/* extra stuff */
+head {
+    padding-bottom: 0px;
+}
 
 .bg-colorful {
-    background-color: royalblue;
+    background-color: cornflowerblue;
 }
 
 .bg-chill {
@@ -37,13 +36,14 @@ body {
 }
 
 .nav-item {
-    background-color: royalblue;
+    color:white;
+    background-color: cornflowerblue;
     border-radius: 5px;
     transition: filter 0.3s ease; /* Change transition property to filter */
 }
 
     .nav-item:hover {
-        filter: brightness(1.5);
+        filter: brightness(1.1);
     }
 
 
@@ -65,7 +65,7 @@ body {
 }
 
 #wideInput {
-    width: 300px;
+    width: 600px;
 }
 
 #smallInput {
@@ -143,8 +143,9 @@ a {
 
 .coloredcol {
     background-color: lightsteelblue;
-    margin: 0;
-    padding: 0;
+    border-radius: 15px;
+    margin: 0px;
+    padding: 0px;
 }
 
 .coloredcol img {
@@ -152,3 +153,41 @@ a {
     padding: 30px; /* Add padding around the images */
     box-sizing: border-box; /* Ensure padding is included in the element's total width and height */
 }
+
+
+footer {
+    padding:10px;
+}
+
+.navbar-brand {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.navbar-nav .nav-item .nav-link {
+    color: white;
+}
+
+.nav-link {
+    color: white !important;
+}
+
+.with-divider {
+    position: relative;
+}
+
+    .with-divider::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        border-left: 3px solid #000; /* Adjust the color as needed */
+        transform: translateX(-50%);
+        z-index: 1; /* Ensure the line is above the content */
+    }
+
+    /* Optional: To create some spacing around the line */
+    .with-divider > div {
+        padding: 15px;
+        box-sizing: border-box;
+    }
