added Categories table

--- a/RealMission8-group2-7/Views/Home/Completed.cshtml
+++ b/RealMission8-group2-7/Views/Home/Completed.cshtml
@@ -14,7 +14,7 @@
     <!-- Hidden inputs for other properties -->
     <input type="hidden" asp-for="quadrant" />
     <input type="hidden" asp-for="task" />
-    <input type="hidden" asp-for="category" />
+    <input type="hidden" asp-for="CategoryId" />
     <input type="hidden" asp-for="duedate" />
 
     <!-- Hidden input for completed -->
